--- a/index.html
+++ b/index.html
@@ -2,24 +2,43 @@
 <html>
 <head>
 	<title>Test</title>
+
+	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<h2>Choose a page</h2>
+	<div class="wrapper">
+		<h1>Search for a block in magento</h1>
 
-	<ul class="page-picker">
-		<li class="page-picker-page" data-page="home">Home</li>
-		<li class="page-picker-page" data-page="plp">Product Listing Page</li>
-		<li class="page-picker-page" data-page="pdp">Product Details Page</li>
-		<li class="page-picker-page" data-page="sign-in">sign in page</li>
-		<li class="page-picker-page" data-page="create-account">Create account page</li>
-		<li class="page-picker-page" data-page="account">account page</li>
-		<li class="page-picker-page" data-page="cart">cart page</li>
-		<li class="page-picker-page" data-page="checkout-shipping">Checkout Shipping Page</li>
-		<li class="page-picker-page" data-page="checkout-payment">Checkout Payment Page</li>
-	</ul>
+		<div class="search-options">
+			<h3>Search by</h3>
+			<div>
+				<label for="css">Css Class Name</label>
+				<input type="checkbox" name="css" value="css" id = "css" checked>
+			</div>
+			<div>
+				<label for="name">Block/Container name</label>
+				<input type="checkbox" name="name" value="name" id = "name" checked>
+			</div>
+
+		</div>
+
+		<div class="search-form">
+			<input class="search-input" type="text" name="search">
+			<button class="action submit">Search</button>
+		</div>
+
+		<div class="search-results">
+			
+		</div>
+	</div>
 
 
-
+<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 <script type="text/javascript" src="main.js"></script>
 
 </body>
